# MESSAGE 指令的语法是:
# MESSAGE([SEND_ERROR | STATUS | FATAL_ERROR] "message to display" ...)
#   SEND_ERROR,产生错误,生成过程被跳过。
#   SATUS ,输出前缀为 — 的信息。
#   FATAL_ERROR,立即终止所有 cmake 过程.
message(STATUS "**********************leetcode*****************************")
message(STATUS "CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
message(STATUS "PROJECT_SOURCE_DIR: ${cmake-learning_SOURCE_DIR}")
message(STATUS "PROJECT_BINARY_DIR: ${cmake-learning_BINARY_DIR}")

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/1_two-sum)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/2_add-two-numbers)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/3_longest-substring-without-repeating-characters)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/4_median-of-two-sorted-arrays)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/5_longest-palindromic-substring)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/6_zigzag-conversion)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/7_reverse-integer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/8_atoi)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/9_palindrome-number)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/11_container-with-most-water)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/12_integer-to-roman)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/13_roman-to-integer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/14_longest-common-prefix)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/15_3sum)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/16_3sum-closest)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/17_letter-combinations-of-a-phone-number)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/18_4sum)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/19_remove-nth-node-from-end-of-list)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/20_valid-parentheses)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/21_merge-two-sorted-lists)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/22_generate-parentheses)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/23_merge-k-sorted-lists)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/24_swap-nodes-in-pairs)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/25_reverse-nodes-in-k-group)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/26_remove-duplicates-from-sorted-array)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/27_remove-element)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/28_find-the-index-of-the-first-occurrence-in-a-string)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/29_divide-two-integers)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/30_substring-with-concatenation-of-all-words)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/31_next-permutation)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/32_longest-valid-parentheses)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/33_search-in-rotated-sorted-array)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/34_find-first-and-last-position-of-element-in-sorted-array)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/35_search-insert-position)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/36_valid-sudoku)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/37_sudoku-solver)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/38_count-and-say)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/39_combination-sum)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/40_combination-sum-ii)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/42_trapping-rain-water)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/43_multiply-strings)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/45_jump-game-ii)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/46_permutations)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/47_permutations-ii)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/48_rotate-image)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/49_group-anagrams)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/50_powx-n)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/)